# hellojn5169world

./: CMakeLists.txt  HelloWorld.c  HelloWorld.cpp  JN5169.cmake  Readme.md  Test.cpp  irq_JN516x.S
