SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_TOOLCHAIN_FILE JN5169.cmake)

PROJECT(GPSLogger)
CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
ENABLE_LANGUAGE(CXX)

IF(NOT SDK_PREFIX)
     MESSAGE(FATAL_ERROR "No SDK_PREFIX specified")
ENDIF()


INCLUDE_DIRECTORIES(
	${SDK_PREFIX}/Components/Common/Include
	${SDK_PREFIX}/Components/Dbg/Include
	${SDK_PREFIX}/Components/HardwareAPI/Include
)

LINK_DIRECTORIES(
	${SDK_PREFIX}/Components/Library
	${SDK_PREFIX}/Chip/JN5169/Build
	${SDK_PREFIX}/Platform/DK4/Library
)

ADD_DEFINITIONS(
	-DJENNIC_CHIP_NAME=_JN5169
	-DJENNIC_CHIP_FAMILY_NAME=_JN516x
)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -TAppBuildZBPro.ld -Wl,--start-group -lHardwareApi_JN5169 -lZPSMAC_Mini_SOC_JN516x -lPWRM_JN516x -lZPSTSV_JN516x -lAES_SW_JN516x -lPDUM_JN516x -lZPSAPL_JN516x -lRandom_JN516x -lPDM_EEPROM_NO_RTOS_JN516x -lDBG_JN516x -lZPSNWK_ZED_JN516x -lRecal_JN516x -lJPT_JN5169 -lMiniMac_JN5169 -lMiniMacShim_JN516x -lMMAC_JN5169 -lJPT_JN5169 -lAes_JN516x -lHardwareApi_JN5169 -lMicroSpecific_JN516x -lBoot_JN516x -lBoardLib_JN516x -lm -lPWRM_JN516x -Wl,--end-group")

ADD_EXECUTABLE(HelloWorld HelloWorld.c)
TARGET_LINK_LIBRARIES(HelloWorld
	HardwareApi_JN5169
        DBG_JN516x
)

STM32_PRINT_SIZE_OF_TARGETS(HelloWorld)
STM32_ADD_HEX_BIN_TARGETS(HelloWorld)
STM32_ADD_DUMP_TARGET(HelloWorld)
