SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_TOOLCHAIN_FILE JN5169.cmake)

PROJECT(GPSLogger)
CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
ENABLE_LANGUAGE(CXX)

IF(NOT SDK_PREFIX)
     MESSAGE(FATAL_ERROR "No SDK_PREFIX specified")
ENDIF()


INCLUDE_DIRECTORIES(
	${SDK_PREFIX}/Components/Common/Include
	${SDK_PREFIX}/Components/Dbg/Include
	${SDK_PREFIX}/Components/HardwareAPI/Include
)

LINK_DIRECTORIES(
	${SDK_PREFIX}/Components/Library
	${SDK_PREFIX}/Chip/JN5169/Build
	${SDK_PREFIX}/Platform/DK4/Library
)

ADD_DEFINITIONS(
	-DJENNIC_CHIP_NAME=_JN5169
	-DJENNIC_CHIP_FAMILY_NAME=_JN516x
)

SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -TAppBuildZBPro.ld")

ADD_EXECUTABLE(HelloWorld HelloWorld.c)
TARGET_LINK_LIBRARIES(HelloWorld
        PWRM_JN516x
	HardwareApi_JN5169
)

STM32_PRINT_SIZE_OF_TARGETS(HelloWorld)
STM32_ADD_HEX_BIN_TARGETS(HelloWorld)
STM32_ADD_DUMP_TARGET(HelloWorld)
